--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,26 @@
-# Python
+# Backend
+*.pyc
 __pycache__/
-*.py[cod]
-venv/
-*.env
-
-# Database
-*.sqlite3
 db.sqlite3
+.env
+.venv
+venv/
+ENV/
 
-# React
-node_modules/
-build/
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Frontend
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
+frontend/coverage
+frontend/build
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
 
 # IDE
 .vscode/
