--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,17 +19,24 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt \
+    && pip install pyOpenSSL
 
 # Create necessary directories
 RUN mkdir -p media static certificates
 
-# Copy entrypoint script
-COPY entrypoint.sh .
-RUN chmod +x entrypoint.sh
-
 # Copy project files
 COPY . .
+
+# Fix line endings in entrypoint.sh
+RUN sed -i 's/\r$//' entrypoint.sh
+
+# Generate certificates
+RUN python generate_cert.py
+
+# Copy entrypoint script and make it executable
+COPY entrypoint.sh .
+RUN chmod +x entrypoint.sh
 
 # Expose port 8000
 EXPOSE 8000
