--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,12 +10,19 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 RUN npm install -g cross-env
+RUN npm install -g react-scripts
+
+# Create certificates directory
+RUN mkdir -p /app/certificates
 
 # Copy project files
 COPY . .
 
+# Copy certificates from backend container
+VOLUME /app/certificates
+
 # Expose port 3000
 EXPOSE 3000
 
-# Start the app with the same certificate paths as package.json
+# Start the app
 CMD ["npm", "run", "start"] 
