--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "cross-env HTTPS=true SSL_CRT_FILE=../backend/certificates/localhost.crt SSL_KEY_FILE=../backend/certificates/localhost.key react-scripts start",
+    "start": "cross-env HTTPS=true SSL_CRT_FILE=./certificates/localhost.crt SSL_KEY_FILE=./certificates/localhost.key react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
