--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DEBUG=True
+      - DEBUG=False
       - FILE_ENCRYPTION_KEY=cGZ/wm8jB2S6Fw19UuawMEnU7Unpt40a93EwkldlmaE=
       - SECRET_KEY=django-insecure-your-secret-key-here
       - DJANGO_SETTINGS_MODULE=core.settings
@@ -18,6 +18,7 @@ services:
     build: ./frontend
     volumes:
       - ./frontend:/app
+      - /app/node_modules
       - certificates:/app/certificates
     ports:
       - "3000:3000"
